WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275870
AX: lineTextMarkerRangeForTextMarker fails on first character of line in Google Docs
https://bugs.webkit.org/show_bug.cgi?id=275870
Summary
AX: lineTextMarkerRangeForTextMarker fails on first character of line in Goog...
Dominic Mazzoni
Reported
2024-06-25 13:44:13 PDT
I created this minimal repro: <div id="textcontrol" contenteditable="true"> First line of text <span contenteditable="false"><br></span> Second line of text <span contenteditable="false"><br></span> Third line of text <span contenteditable="false"><br></span> Fourth line of text </div> If you arrow up and down this text with VoiceOver on, the correct line is not announced when you're on the first character of a line. At any other character index it works fine. The API that's failing is lineTextMarkerRangeForTextMarker, it's returning a range of length 0 or 1 when the marker is at the beginning of the line.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-25 13:45:21 PDT
<
rdar://problem/130529132
>
Dominic Mazzoni
Comment 2
2024-06-26 10:58:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30196
EWS
Comment 3
2024-06-27 12:59:26 PDT
Committed
280426@main
(69bf3ef0cfdc): <
https://commits.webkit.org/280426@main
> Reviewed commits have been landed. Closing PR #30196 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug