AX: lineTextMarkerRangeForTextMarker fails on first character of line in Google Docs https://bugs.webkit.org/show_bug.cgi?id=275870 rdar://130529132

Reviewed by Tyler Wilcock.

nextLineEndPosition has some workarounds for cases where the standard VisiblePosition
endOfLine function returns null. When computing AccessibilityObject::lineRangeForPosition
we should use that so that we're more likely to get a valid line.

* LayoutTests/accessibility/mac/line-text-marker-range-for-text-marker-expected.txt: Added.
* LayoutTests/accessibility/mac/line-text-marker-range-for-text-marker.html: Added.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::lineRangeForPosition const):

Canonical link: https://commits.webkit.org/280426@main